fix title on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -603,23 +603,41 @@ body {
 }
 
 .content-property header {
-    font-size: 3.2em;
     margin: auto;
     margin-bottom: 0.5em;
-
+    text-align: center;
 }
 .content-property header h2 {
-    font-size: 5rem;
     margin: 0;
+    font-size: 30px;
+}
+@media (min-width: 578px){
+    .content-property header h2 {
+        font-size: 35px;
+    }
+}
+@media (min-width: 768px){
+    .content-property header h2 {
+        font-size: 42px;
+    }
+}
+@media (min-width: 1068px){
+    .content-property header h2 {
+        font-size: 52px;
+    }
 }
 .content-property header small {
-    font-size: 15px;
+    font-size: 12px;
     line-height: 1.2;
     display: block;
     padding: 10px;
     text-align: center;
 }
-
+@media (min-width: 768px) {
+    .content-property header small {
+        font-size: 15px;
+    }
+}
 .content-property .video {
     position: relative;
     overflow: hidden;
@@ -1044,10 +1062,6 @@ body {
         height: 3em;
     }
 
-    .content-property header {
-        font-size: 2.5em;
-    }
-
     .content-property {
         width: 95%;
     }
@@ -1195,11 +1209,6 @@ body {
 
     .content-property {
         width: 95%;
-    }
-
-    .content-property header {
-        font-size: 1.8em;
-        text-align: center;
     }
 
     .content-property .content-video {
